--- a/src/Styles/fonts.module.scss
+++ b/src/Styles/fonts.module.scss
@@ -5,7 +5,10 @@
 
 
 
-
+/// Rubik 400
   @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-
+/// Rubik 500
   @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+
+
+  
