--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -7,18 +7,39 @@
   text-transform: uppercase;
 
   &__box {
+    // background-color: coral;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    
+
+    @include desktop {
+      padding: 30px 0;
+      flex-direction: row;
+      align-items: baseline;
+    }  
 
     &__logoList {
+      // background-color: aqua;
+
+      margin-top: 40px;
       display: flex;
-      gap: 20px;
-      // justify-content: ;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+
+      font-size: 16px;
+      letter-spacing: 1px;
+
+      @include desktop {
+        margin: 0;
+
+        flex-direction: row;
+        gap: 50px;
+
+      }
 
       &__el {
         display: flex;
-        // justify-content: center;
         align-items: center;
 
         &__link {
@@ -32,8 +53,18 @@
       }
     }
     &__mediaList {
+      // background-color: brown;
       display: flex;
-      gap: 20px;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+
+      @include desktop {
+        margin: 0;
+        gap: 50px;
+      }
 
       &__el {
 
@@ -67,9 +98,6 @@
       }
 }
 
-.listTest:hover {
-  color: red;
 
-}
 
 
