--- a/src/components/Frequently/frequently.module.scss
+++ b/src/components/Frequently/frequently.module.scss
@@ -1,17 +1,71 @@
+@import './../../Styles/globalVars.module.scss';
+
+
 .frequently {
-    background-color: burlywood;
+    // background-color: burlywood;
     display: flex;
     justify-content: center;
     align-items: center;
-    // flex-direction: column;
+
+    margin-top: 50px;
 
     &__list {
-        width: 70%;
-        background-color: cadetblue;
+        // background-color: cadetblue;
 
-        &__el {
-        // width: 70%;
-    }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &__head {
+            // background-color: hotpink;
+            text-align: center;
+            width: 320px;
+
+            @include desktop {
+                width: 500px;
+                margin-bottom: 30px;
+            }
+            &__title {
+
+            }
+            &__description {
+                color: $gray;
+                font-weight: 500;
+                line-height: 1.5;
+                font-size: 16px;
+                @include desktop {
+                    font-size: inherit;
+                }
+            }
+        }
+        &__quest {
+            // background-color: bisque;
+            width: 320px;
+            @include desktop {
+                width: 600px;
+            }
+
+        }
+        &__btn {
+            margin-top: 50px;
+            margin-bottom: 110px;
+            width: 120px;
+            height: 50px;
+            border-radius: 8px;
+            border: 1px solid $blueLight;
+            color: $white;
+            font-size: 14px;
+            letter-spacing: 1px;
+            background-color: $blueLight;
+            box-shadow: -1px 6px 6px $blueLightShadow,
+                        1px 6px 6px $blueLightShadow;
+                    
+            &:hover {
+                background-color: $white;
+                color: $blueLight;
+            }
+        }
+
     }
     
 
