--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -3,6 +3,7 @@
 body {
     // font-family: 'Rubik', sans-serif;
     font-family: $rubikFont;
+    color: $blueDark;
     font-size: 18px;
 
     margin: 0;
@@ -14,6 +15,11 @@ body {
 
     h2 {
       margin: 0;
+      font-size: 24px;
+      @include desktop {
+        font-size: 30px;
+      }
+      
     }
   
   }
