--- a/src/components/HeadSection/headSection.module.scss
+++ b/src/components/HeadSection/headSection.module.scss
@@ -16,7 +16,6 @@
             grid-template-columns: repeat(2, 1fr);
         }
         
-
         &__el {
             display: flex;
             justify-content: center;
@@ -26,10 +25,7 @@
             }
 
             &__box {
-
                 // background-color: cadetblue;
-
-
                 margin-top: 30px;
                 text-align: center;
                 line-height: 1.5;
@@ -37,9 +33,7 @@
                 @include desktop {
                     text-align: left;
                     width: 480px;
-
                 }
-
 
                 &__title {
                     @include desktop {
@@ -62,88 +56,77 @@
                     }
 
                     &__btnChrome {
-                    width: 150px;
-                    height: 40px;
-                    border-radius: 5px;
-                    border: 1px solid $blueLight;
-                    font-weight: bold;
+                        width: 150px;
+                        height: 40px;
+                        border-radius: 5px;
+                        border: 1px solid $blueLight;
+                        font-weight: bold;
 
-                    background-color: $blueLight;
-                    color: $white;
-                    &:hover {
-                        background-color: $white;
-                        color: $blueLight;
-                        box-shadow:-1px 6px 6px $blueLightShadow;
-                    }
+                        background-color: $blueLight;
+                        color: $white;
+
+                        &:hover {
+                            background-color: $white;
+                            color: $blueLight;
+                            box-shadow:-1px 6px 6px $blueLightShadow;
+                        }
                     }
                     &__btnFirefox {
-                    width: 150px;
-                    height: 40px;
-                    border-radius: 5px;
-                    border: none;
-                    font-weight: bold;
+                        width: 150px;
+                        height: 40px;
+                        border-radius: 5px;
+                        border: none;
+                        font-weight: bold;
 
-                    background-color: $grayWhite;
-                    color: $blueDark;
-                    box-shadow: -1px 6px 6px $blueLightShadow;
-                    &:hover {
+                        background-color: $grayWhite;
+                        color: $blueDark;
                         box-shadow: -1px 6px 6px $blueLightShadow;
-                        border: 1px solid $blueDark;
 
-                    }
+                        &:hover {
+                            box-shadow: -1px 6px 6px $blueLightShadow;
+                            border: 1px solid $blueDark;
+                        }
                     }
                 }
-
-                
-                
             }
         }
+
         &__back {
             // background-color: cornflowerblue;
             display: flex;
             justify-content: flex-end;
-            // align-items: flex-end;
 
             position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                background-color: $blueLight;
+                z-index: -1;
+
+                border-top-left-radius: 25em;
+                border-bottom-left-radius: 25em;
+
+                width: 310px;
+                height: 190px;
+
+                bottom: -5px;      
+                right: -30px;
+
+                @include desktop {
+                    width: 580px;
+                    height: 340px;
+
+                    bottom: -20px;      
+                    right: $margPseudo;
+                }
+            }
             
             &__img {
                 @include desktopBelow {
                     width: 340px;
                 }
-
             }
-
-           
         }
-        &__back::after {
-        content: '';
-        position: absolute;
-        background-color: $blueLight;
-        z-index: -1;
-
-        border-top-left-radius: 25em;
-        border-bottom-left-radius: 25em;
-
-        width: 310px;
-        height: 190px;
-
-        bottom: -5px;      
-        right: -30px;
-
-        @include desktop {
-            width: 580px;
-            height: 340px;
-
-            bottom: -20px;      
-            right: $margPseudo;
-        }
-
-       
-
-
-    }
-    }
-
-
-    
+    }  
 }
