--- a/src/Styles/app.module.scss
+++ b/src/Styles/app.module.scss
@@ -1,22 +1,18 @@
 
-@import './Styles/globalVars.module.scss';
+@import './globalVars.module.scss';
 
-// .brake {
-//     // display: flex;
-//     // flex-direction: column;
-//     // margin: 0;
-// }
+
 .modal {
     // background-color: brown;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 80px;
-    // width: 50%;
+
     height: 5px;
+
     @include desktop {
         height: 10px;
         margin: 0 280px 30px;
     }
-
 }
