--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -1,15 +1,9 @@
 @import './../../Styles/globalVars.module.scss';
 
 .modalBox {
-    
-    // width: 100vw;
-    // height: 100vh;
     background-color: $white;
     margin: 80px;
-    box-shadow: -1px 6px 6px $blueLightShadow,
-                1px 6px 6px $blueLightShadow;
-
-    
+    box-shadow: -1px 6px 6px $blueLightShadow, 1px 6px 6px $blueLightShadow;
 }
 
 .modalDiv {
@@ -26,7 +20,6 @@
     padding-top: 10px;
     padding-right: 10px;
     width: 100%;
-    // height: 20px;
 
     display: flex;
     justify-content: flex-end;
